syntax = "proto3";
package payment;
option java_package = "com.proto.payment";
option java_multiple_files = true;

message CreatePaymentRequest {
  string stripe_api_key = 1;
  string payment_method_id = 2;
  int32 amount = 3;
}

message CreatePaymentResponse {
  string id = 1;
  string status = 2;
}
service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentResponse) {}
}